Added superuser flag / prevent login for inactive users / prevent deletion of superadmin